--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-   <body>
-      <p>Radio check. Pilot, please confirm.</p>
-      <p>hello world</p>
-      <p>test</p>
-      
-   </body>
-</html> 
+  <head>
+    <title>Communication Log</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <p>Radio check. Pilot, please confirm.</p>
+    <p>hello world</p>
+    <p>test</p>
+  </body>
+</html>
